--- a/index.html
+++ b/index.html
@@ -50,8 +50,12 @@
           href="#home"
           class="text-2xl font-extrabold tracking-wider flex items-center space-x-2"
         >
-          <span class="text-lime-400">SALES</span
-          ><span class="text-white">ADVISORS</span>
+          <img
+            src="/assets/Charged consulting logo small.jpeg"
+            alt="logo"
+            srcset=""
+            class="w-12 h-12"
+          />
         </a>
 
         <div class="hidden md:flex space-x-8 items-center text-sm font-medium">
@@ -334,12 +338,23 @@
                   data-aos="zoom-in"
                   data-aos-delay="200"
                 >
-                  <i class="fas fa-chart-area text-3xl text-blue-600 mb-3"></i>
-                  <p class="text-xl font-bold text-slate-900">
-                    5ox Time-to-Value
-                  </p>
+                  <i class="fas fa-microchip text-3xl text-blue-600 mb-3"></i>
+                  <p class="text-xl font-bold text-slate-900">AI-Powered</p>
                   <p class="text-sm text-slate-500">
-                    Users run advanced financial solutions.
+                    Pinpointing pipeline friction points.
+                  </p>
+                </div>
+
+                <!-- Card 4 -->
+                <div
+                  class="p-6 bg-white rounded-2xl shadow-lg border border-slate-200 text-center"
+                  data-aos="zoom-in"
+                  data-aos-delay="200"
+                >
+                  <i class="fas fa-sitemap text-3xl text-blue-600 mb-3"></i>
+                  <p class="text-xl font-bold text-slate-900">RevOps Model</p>
+                  <p class="text-sm text-slate-500">
+                    Unified revenue operations structure.
                   </p>
                 </div>
               </div>
@@ -505,7 +520,7 @@
               <h2
                 class="col-span-2 text-4xl font-extrabold text-slate-900 mb-2 leading-tight"
               >
-                Our Strategic Framework
+                Key Deliverables
               </h2>
               <!-- Card 1 -->
               <div
@@ -513,10 +528,9 @@
                 data-aos="zoom-in"
                 data-aos-delay="100"
               >
-                <i class="fas fa-cubes text-3xl text-blue-600 mb-3"></i>
-                <p class="text-xl font-bold text-slate-900">35% Avg. Lift</p>
-                <p class="text-sm text-slate-500">
-                  In customer satisfaction rate.
+                <i class="fas fa-link text-3xl text-blue-600 mb-3"></i>
+                <p class="text-xl font-bold text-slate-900">
+                  Custom Go-to-Market Strategy
                 </p>
               </div>
               <!-- Card 2 -->
@@ -525,10 +539,9 @@
                 data-aos="zoom-in"
                 data-aos-delay="200"
               >
-                <i class="fas fa-chart-area text-3xl text-blue-600 mb-3"></i>
-                <p class="text-xl font-bold text-slate-900">5x Time-to-Value</p>
-                <p class="text-sm text-slate-500">
-                  Users run advanced financial solutions.
+                <i class="fas fa-book-open text-3xl text-blue-600 mb-3"></i>
+                <p class="text-xl font-bold text-slate-900">
+                  Detailed Sales Playbooks & Training
                 </p>
               </div>
 
@@ -538,10 +551,11 @@
                 data-aos="zoom-in"
                 data-aos-delay="200"
               >
-                <i class="fas fa-chart-area text-3xl text-blue-600 mb-3"></i>
-                <p class="text-xl font-bold text-slate-900">5x Time-to-Value</p>
-                <p class="text-sm text-slate-500">
-                  Users run advanced financial solutions.
+                <i
+                  class="fas fa-money-check-alt text-3xl text-blue-600 mb-3"
+                ></i>
+                <p class="text-xl font-bold text-slate-900">
+                  Compensation & Incentive Modeling
                 </p>
               </div>
 
@@ -551,10 +565,9 @@
                 data-aos="zoom-in"
                 data-aos-delay="200"
               >
-                <i class="fas fa-chart-area text-3xl text-blue-600 mb-3"></i>
-                <p class="text-xl font-bold text-slate-900">5x Time-to-Value</p>
-                <p class="text-sm text-slate-500">
-                  Users run advanced financial solutions.
+                <i class="fas fa-search-plus text-3xl text-blue-600 mb-3"></i>
+                <p class="text-xl font-bold text-slate-900">
+                  CRM Audit and Optimization.
                 </p>
               </div>
             </div>
@@ -1282,7 +1295,7 @@
                     >
                     <input
                       type="text"
-                      class="w-full rounded-3xl border-slate-700"
+                      class="w-full rounded-2xl border border-slate-300"
                       placeholder="John Doe"
                     />
                   </div>
@@ -1294,7 +1307,7 @@
                       type="email"
                       id="email"
                       placeholder="work@company.com"
-                      class="w-full"
+                      class="w-full border border-slate-300 rounded-2xl"
                     />
                   </div>
                 </div>
@@ -1306,7 +1319,7 @@
                     type="text"
                     id="company"
                     placeholder="Acme Corp - CEO/VP"
-                    class="w-full"
+                    class="w-full border border-slate-300 rounded-2xl"
                   />
                 </div>
                 <div>
@@ -1317,12 +1330,12 @@
                     id="message"
                     rows="3"
                     placeholder="Tell us about your sales goals..."
-                    class="w-full"
+                    class="w-full border border-slate-300 rounded-2xl"
                   ></textarea>
                 </div>
                 <button
                   type="submit"
-                  class="w-full bg-blue-600 text-white font-bold py-4 rounded-xl hover:bg-blue-700 transition shadow-lg transform active:scale-[0.98]"
+                  class="w-full bg-blue-600 text-white font-bold py-4 rounded-3xl hover:bg-blue-700 transition shadow-lg transform active:scale-[0.98]"
                 >
                   Submit for Review
                 </button>
